# Chicago-Crime-Safe-City-Project

./: .gitignore  README.md
chicago-bq/: README.md
chicago-bq/dags/: chicago_crime_dimensional_dag.py
chicago-bq/scripts/gold/: build_crime_dim_crime_type.py  build_crime_dim_date.py  build_crime_dim_location.py  build_crime_dim_time_of_day.py  build_fact_crime_incidents.py  build_fact_crime_summary.py
chicago-crime-web-app/: README.md  docker-compose.yaml
chicago-crime-web-app/backend/: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
chicago-crime-web-app/backend/backend_service/: __init__.py  config.py  db.py  main.py  schemas.py
chicago-crime-web-app/backend/backend_service/routers/: geo.py  ml.py
chicago-crime-web-app/backend/data/geo/: community_areas.geojson
chicago-crime-web-app/frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts
chicago-ml/: README.md
chicago-ml/dags/: chicago_crime_area_risk_daily_score_dag.py  chicago_crime_area_risk_features_dag.py  chicago_crime_area_risk_weekly_ml_dag.py  chicago_crime_dag.py  chicago_crime_ml_daily_dag.py  chicago_crime_silver_to_gold_ml_dag.py
chicago-ml/scripts/: crime_taxonomy.py
chicago-rag/: README.md
chicago-rag/chatbot/: .dockerignore  .env.example  Dockerfile  docker-compose.yaml  pyproject.toml
chicago-rag/chatbot/rag_chatbot/: __init__.py  citations.py  config.py  graph_workflow.py  guardrails.py  main.py  mcp_client.py  prompts.py  schemas.py  tools.py
chicago-rag/chatbot/rag_chatbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
chicago-rag/dags/: chicago_crime_neo4j_load_dag.py  chicago_crime_sensor_load_to_iceberg.py  process_chicago_crime_dag.py
chicago-rag/scripts/: bq_schema.py
(+27 files in other folders)
