[project]
name = "backend-service"
version = "0.1.0"
description = "FastAPI serving AI Studio map API from chicago_crime_analytics Postgres"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
backend-service = "backend_service.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend_service"]
